# api-capi-zip

./: Dockerfile  README.md  comandos.txt  docker-compose.yml  pyproject.toml  test_conection.py
app/: main.py
app/core/: date_util.py  db_util.py  settings.py
app/db/: base.py  connection.py  depends.py  models.py
app/db/model/: models.py
app/entity/: connection.py
app/providers/: hash_providers.py  token_providers.py
app/repository/: click_repository.py  link_repository.py  user_repository.py
app/routes/: auth_user.py  auth_util.py  click_route.py  link_route.py  route_link.py  router_link.py
app/schemas/: schemas.py
app/utils/: UtilClicks.py  auth_util.py  email_util.py
migrations/: env.py
migrations/versions/: 1dec33f50194_mudance_table_click.py  2b94c7aa8aee_k.py  307241fa6e52_rmv_table_click.py  38d48c01fdc2_add_table_click.py  40cbee2b6a71_change_sem_id_table_click.py  470e37fb172f_table_reset_password.py  55e3a13ce9fa_mudance_table_click.py  58c46e1265e3_add_new_password_reset_password.py  74220bba0667_add_id_table_click.py  84641ed3020f_create_tables.py  89cd2751221d_add_2_table_click.py  9402c9214fe3_mudance_table_click.py  b249ce87361d_add_2_table_click.py  ba347bb81f06_add_atribute_created_at_table_reset_.py  bb402029887b_init.py  bf42cd6851cd_change_table_click.py  d9319c39bb9a_table.py  ec552862760d_finaly_update_table_click.py
