[tool.poetry]
name = "cap-zip"
version = "0.1.0"
description = "encurtador link"
authors = ["KarMiguel <carlosmiguel.dsa12@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.24.0.post1"
alembic = "^1.12.1"
python-decouple = "^3.8"
passlib = "^1.7.4"
python-jose = "^3.3.0"
python-multipart = "^0.0.6"
psycopg2-binary = "^2.9.9"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
bcrypt = "^4.0.1"
fastapi = "^0.109.0"
sqlalchemy = "^2.0.25"
geopy = "^2.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
